# animations

./: .gitignore  README.md  a.out  anim.hh  animation.hh  batch.hh  build.sh  compile_flags.txt  example  index.js  index.wasm  interpolators.hh  main.cc  out  run.sh  sequence.hh
anim/: CMakeLists.txt  Justfile  anim.hh  animation.hh  batch.cc  batch.hh  common.hh  sequence.cc  sequence.hh  template.hh
docs/: index.js  index.wasm
examples/: build.sh  compile_flags.txt  main.cc  simple.cc
libanim/: CMakeLists.txt  anim.hh  animation.hh  batch.cc  batch.hh  batch.wasm  common.hh  sequence.cc  sequence.hh  sequence.wasm
libanim/.cache/clangd/index/: batch.cc.40968FDCDB8AA652.idx  batch.hh.0EE0FAA7FFCF7CBD.idx  common.hh.BBBCA3BACB875534.idx  interpolators.hh.FB56D955AEA7B63F.idx  sequence.cc.82AC802DDFD110FF.idx  sequence.hh.DA28E4BCF5908E57.idx
